refactor: update stream mapper